--- a/index.html
+++ b/index.html
@@ -47,63 +47,68 @@
         <section class="secondSection">
             <span class="text-gray">What I have done so far</span>
             <h1>Work Experience</h1>
-            <div class="box">
-                <div class="vertical">
-                    <img src="image/android.png" alt="" class="image-top">
-                    <div class="vertical-title">
-                        Android Developer
-                    </div>
-                    <div class="vertical-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, magnam aliquam delectus beatae
-                        asperiores illum ex fuga ut dolor aspernatur provident minus accusantium iusto architecto earum
-                        possimus quos magni blanditiis.
+
+            <div class="slide-container swiper">
+                <div class="slide-content">
+                    <div class="card-wrapper swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="image/android.png" alt="android" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="langauge-name">Android</h2>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+                                    eaque obcaecati voluptate nesciunt distinctio ex quod placeat, ut architecto magni
+                                    temporibus aspernatur cumque voluptatem? Explicabo, veniam non. Recusandae, amet
+                                    sit.</p>
+
+                                <button class="ViewButton">View More</button>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="image/android.png" alt="android" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="langauge-name">Android</h2>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+                                    eaque obcaecati voluptate nesciunt distinctio ex quod placeat, ut architecto magni
+                                    temporibus aspernatur cumque voluptatem? Explicabo, veniam non. Recusandae, amet
+                                    sit.</p>
+
+                                <button class="ViewButton">View More</button>
+                            </div>
+                        </div>
+                        <div class="card swiper-slide">
+                            <div class="image-content">
+                                <span class="overlay"></span>
+                                <div class="card-image">
+                                    <img src="image/android.png" alt="android" class="card-img">
+                                </div>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="langauge-name">Android</h2>
+                                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+                                    eaque obcaecati voluptate nesciunt distinctio ex quod placeat, ut architecto magni
+                                    temporibus aspernatur cumque voluptatem? Explicabo, veniam non. Recusandae, amet
+                                    sit.</p>
+
+                                <button class="ViewButton">View More</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="vertical">
-                    <img src="image/python.png" alt="" class="image-top">
-                    <div class="vertical-title">
-                        Python developer
-                    </div>
-                    <div class="vertical-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, magnam aliquam delectus beatae
-                        asperiores illum ex fuga ut dolor aspernatur provident minus accusantium iusto architecto earum
-                        possimus quos magni blanditiis.
-                    </div>
-                </div>
-                <div class="vertical">
-                    <img src="image/java.png" alt="" class="image-top">
-                    <div class="vertical-title">
-                        Java developer
-                    </div>
-                    <div class="vertical-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, magnam aliquam delectus beatae
-                        asperiores illum ex fuga ut dolor aspernatur provident minus accusantium iusto architecto earum
-                        possimus quos magni blanditiis.
-                    </div>
-                </div>
-                <div class="vertical">
-                    <img src="image/c++.png" alt="" class="image-top">
-                    <div class="vertical-title">
-                        C/C++ developer
-                    </div>
-                    <div class="vertical-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, magnam aliquam delectus beatae
-                        asperiores illum ex fuga ut dolor aspernatur provident minus accusantium iusto architecto earum
-                        possimus quos magni blanditiis.
-                    </div>
-                </div>
-                <div class="vertical">
-                    <img src="image/sql.png" alt="" class="image-top">
-                    <div class="vertical-title">
-                        Database Management
-                    </div>
-                    <div class="vertical-desc">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis, magnam aliquam delectus beatae
-                        asperiores illum ex fuga ut dolor aspernatur provident minus accusantium iusto architecto earum
-                        possimus quos magni blanditiis.
-                    </div>
-                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
             </div>
+
         </section>
     </main>
     <footer>
@@ -113,31 +118,43 @@
             </div>
             <div class="footer-second">
                 <ul>
-                    <li><a href="https://github.com/devenvoy" target="_blank"><i class="fa-brands fa-github fa-xl" style="color: #ffffff;"></i> GitHub</a></li>
+                    <li><a href="https://github.com/devenvoy" target="_blank"><i class="fa-brands fa-github fa-xl"
+                                style="color: #ffffff;"></i> GitHub</a></li>
                     <br>
-                    <li><a href="https://www.linkedin.com/in/devansh-a-bb104524a" target="_blank"><i class="fa-brands fa-linkedin fa-xl" style="color: #3bc6f8;"></i> LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/devansh-a-bb104524a" target="_blank"><i
+                                class="fa-brands fa-linkedin fa-xl" style="color: #3bc6f8;"></i> LinkedIn</a></li>
                     <br>
-                    <li><a href="mailto:devanshamdavadwala@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-xl" style="color: #fd2b2b;"></i> devansh...la@gmail.com</a></li>
+                    <li><a href="mailto:devanshamdavadwala@gmail.com" target="_blank"><i
+                                class="fa-solid fa-envelope fa-xl" style="color: #fd2b2b;"></i>
+                            devansh...la@gmail.com</a></li>
                 </ul>
-                
+
             </div>
             <div class="footer-third">
                 <ul>
-                    <li><a href="tel:+91 9429509806" target="_blank"><i class="fa-solid fa-phone fa-xl" style="color: #56d8f1;"></i> Contact No.</a></li>
+                    <li><a href="tel:+91 9429509806" target="_blank"><i class="fa-solid fa-phone fa-xl"
+                                style="color: #56d8f1;"></i> Contact No.</a></li>
                     <br>
-                    <li><a href="https://wa.me/9429509806" target="_blank"><i class="fa-brands fa-whatsapp fa-xl" style="color: #3efe28;"></i> whatsapp</a></li>
+                    <li><a href="https://wa.me/9429509806" target="_blank"><i class="fa-brands fa-whatsapp fa-xl"
+                                style="color: #3efe28;"></i> whatsapp</a></li>
                     <br>
-                    <li><a href="https://twitter.com/Devansh_AJ?t=bvI__sX-ldunm-9cuMqF7A&s=09" target="_blank"><i class="fa-brands fa-twitter fa-xl" style="color: #1a8cd8;"></i> Twitter</a></li>
+                    <li><a href="https://twitter.com/Devansh_AJ?t=bvI__sX-ldunm-9cuMqF7A&s=09" target="_blank"><i
+                                class="fa-brands fa-twitter fa-xl" style="color: #1a8cd8;"></i> Twitter</a></li>
                 </ul>
-                
+
             </div>
             <div class="footer-fourth">
                 <ul>
-                    <li><a href="https://www.facebook.com/devansh.amadavadwala" target="_blank"><i class="fa-brands fa-facebook fa-xl" style="color: rgb(58, 163, 244);"></i> facebook</a></li>
+                    <li><a href="https://www.facebook.com/devansh.amadavadwala" target="_blank"><i
+                                class="fa-brands fa-facebook fa-xl" style="color: rgb(58, 163, 244);"></i> facebook</a>
+                    </li>
                     <br>
-                    <li><a href="https://instagram.com/aj_devansh?igshid=NTc4MTIwNjQ2YQ==" target="_blank"><i class="fa-brands fa-instagram fa-xl" style="color: rgb(232, 101, 191);"></i> Instagram</a></li>
+                    <li><a href="https://instagram.com/aj_devansh?igshid=NTc4MTIwNjQ2YQ==" target="_blank"><i
+                                class="fa-brands fa-instagram fa-xl" style="color: rgb(232, 101, 191);"></i>
+                            Instagram</a></li>
                     <br>
-                    <li><a href="https://www.youtube.com/channel/UCsmc7CxNyBKcQz3mdcbOBog" target="_blank"><i class="fa-brands fa-youtube fa-xl" style="color: #d70c0c;"></i> Youtube</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCsmc7CxNyBKcQz3mdcbOBog" target="_blank"><i
+                                class="fa-brands fa-youtube fa-xl" style="color: #d70c0c;"></i> Youtube</a></li>
                 </ul>
             </div>
         </div>
